Added attendence and edited profile

--- a/main/assets/css/calendar.css
+++ b/main/assets/css/calendar.css
@@ -28,9 +28,9 @@ body {
   cursor: pointer;
   display: inline-block;
   zoom: 1;
-  background: #00a2b7;
+  background: #2a335f;
   color: #fff;
-  border: 1px solid #0aa2b5;
+  border: 1px solid #2a335f;
   border-radius: 4px;
   padding: 5px 10px;
 }
